# for.Daniel

captureshark/: .env.example  .gitignore  README.md
captureshark/.githooks/: agent-pre-commit  agent-pre-commit.py  agent-territories.json  check-git-command.py
captureshark/backend/: README.md  alembic.ini  pyproject.toml
captureshark/backend/migrations/: env.py  script.py.mako
captureshark/backend/migrations/versions/: 20260508_1239_initial_auth_schema_users_oauth_tokens_.py  20260508_1404_add_sheet_connections_table.py  20260509_0001_add_header_mapping_to_sheet_connections.py  20260518_0001_add_idempotency_keys_table.py
captureshark/backend/src/captureshark/: __init__.py  config.py  main.py
captureshark/backend/src/captureshark/adapters/: __init__.py  _sheets_row_format.py  _sheets_status_map.py  assemblyai_token_provider.py  google_docai_vision_extractor.py  google_oauth_provider.py  google_sheets_repo.py  idempotency_orm.py  image_preprocessor.py  openai_chat_extractor.py  openai_vision_extractor.py  openai_whisper_transcriber.py  orm.py  sqlite_idempotency_store.py  sqlite_session_store.py  sqlite_sheet_connection_repo.py  sqlite_token_store.py  sqlite_user_repo.py  user_oauth_sheets_header_reader.py  user_oauth_sheets_writer.py
captureshark/backend/src/captureshark/api/: deps.py  logging_config.py  schemas.py  security.py  sse_heartbeat.py
captureshark/backend/src/captureshark/api/middleware/: __init__.py  cost_cap.py  request_id.py
captureshark/backend/src/captureshark/api/routes/: auth.py  captures.py  client_errors.py  features.py  health.py  live_captions.py  live_captions_telemetry.py  sheets.py
captureshark/backend/src/captureshark/db/: __init__.py  base.py  engine.py  types.py
captureshark/backend/src/captureshark/domain/: __init__.py  auth.py  capture.py  column_mapping.py  extraction.py  idempotency.py  live_captions.py  sheets.py  signal_gate.py  transcription.py  vision.py
captureshark/backend/src/captureshark/prompts/: vision_extraction_v1.txt  vision_extraction_v1_3_1.txt
captureshark/backend/src/captureshark/services/: __init__.py  _date_helpers.py  _token_freshness.py  auth_service.py  extraction_service.py  live_captions_service.py  sheets_service.py  user_mapping_service.py  user_sheets_service.py
captureshark/backend/tests/integration/: conftest.py  test_captures.py  test_captures_photo.py  test_captures_voice.py  test_client_errors.py  test_cost_cap.py  test_features.py  test_health.py  test_live_captions.py  test_live_captions_telemetry.py  test_proposed_mapping.py  test_request_id.py  test_sheets.py
captureshark/backend/tests/unit/: test_assemblyai_token_provider.py  test_auth_service.py  test_column_mapping.py  test_date_helpers.py  test_extraction_service.py  test_google_docai_vision_extractor.py  test_google_oauth_provider.py  test_image_preprocessor.py  test_logging.py  test_openai_vision_extractor.py  test_openai_whisper_transcriber.py  test_sheets_service.py  test_sheets_status_map.py  test_sqlite_idempotency_store.py  test_sqlite_token_store.py  test_sse_heartbeat.py  test_token_freshness.py
captureshark/docs/: README.md
captureshark/frontend/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
recapshark/: .gitignore  CHANGELOG.md  LICENSE  README.md  ecosystem.config.js  package-lock.json  package.json  playwright.config.js  vite.config.js
recapshark/pipeline/: _subs_provider_fetch.py  audio_cache.py  chat_log_routes.py  chat_messages_store.py  chat_service.py  config.py  constants.py  debug_routes.py  deps.py  entity_routes.py  etl_sessions.py  get_audio.py  (+26 more)
(+294 files in other folders)
