[project]
name = "captureshark"
version = "0.1.0"
description = "Messy real-world input → clean structured rows in a Google Sheet."
requires-python = ">=3.12"
authors = [{ name = "CaptureShark" }]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.55.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.36.0",
    "authlib>=1.3.2",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "itsdangerous>=2.2.0",
    # Pure-data IANA timezone database. Required so `zoneinfo.ZoneInfo`
    # can resolve names like "America/Los_Angeles" on platforms without
    # a system tz database (Windows always; some minimal Linux containers).
    # Used by the `client_tz` localisation path in services/_date_helpers.py.
    "tzdata>=2024.2",
    # Structured (JSON) log formatter. Replaces the default text formatter
    # so every log line is a single JSON object — required for downstream
    # log aggregation (Datadog, CloudWatch, Loki, etc.) to index fields
    # like request_id, user_id, status. Wired up in api/logging_config.py.
    # `>=3.0` because we import from the canonical `pythonjsonlogger.json`
    # module path (the legacy `jsonlogger` module was renamed in 3.x).
    "python-json-logger>=3.0.0",
    # Required by FastAPI's `UploadFile` / `Form` dependencies on the
    # voice capture endpoint (multipart audio uploads).
    "python-multipart>=0.0.18",
    # Image preprocessing for the photo capture path. Pillow decodes
    # JPEG/PNG/WEBP and applies EXIF orientation; pillow-heif registers
    # the HEIC handler with Pillow so iOS-uploaded photos decode in the
    # same pipeline. Both are pure-Python wheels for the platforms we
    # ship on (Windows dev + Linux server).
    "pillow>=11.0.0",
    "pillow-heif>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/captureshark"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
# Google client libraries don't ship py.typed markers (yet). Treat their
# surface as untyped — we still keep --strict everywhere else.
module = ["googleapiclient.*", "google.oauth2.*", "google.auth.*"]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

[[tool.mypy.overrides]]
# Authlib doesn't ship type stubs; itsdangerous's stubs are partial. Same
# pattern as the Google block — narrow opt-out, strict everywhere else.
module = ["authlib.*", "itsdangerous.*"]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
